# USScanWithUR

./: .gitignore  README.md  helper.md  package.xml  setup.cfg  setup.py  testify(2).py  todo_list.md  ur10e_kine.py
camera/: Doube_camera.py  calibration.py  calibration_extrinsics.py  calibration_extrinsics_single.py  calibration_extrinsics_test.py  calibration_intrinsics.py  camera_tese_2.py  camera_test.py  config_lc.yaml  config_rc.yaml  depth_example.py  double_depth_example.py  dual_camera_wi_thread.py  dual_camera_wo_thread.py  get_dual_imgs_and_pos.py  get_imgs_and_pos.py  readme.md  robot_pos.txt  robot_pos_1.txt  single_camera.py  single_depth_example.py  testify.py  ur10e_kine.py  z_test_cv2.py
camera/api/: InuStreamsPyth.py  base_stream.py  cnn.py  cnn_app.py  depth_properties.py  depth_stream.py  errors.py  features_tracking.py  histogram.py  hw_info.py  image_stream.py  image_stream_registered.py  imu.py  injection.py  inu_sensor.py  library_loader.py  point_cloud.py  shared.py  slam.py  stereo.py  super_frame.py  temperature.py
camera/api1/: InuStreamsPyth.py  base_frame.py  calibration_data.py  cnn.py  cnn_defs.py  depth_properties.py  depth_stream.py  features_tracking.py  hw_info.py  image_frame.py  inu_sensor.py  point_cloud.py  readme.md  shared.py  slam.py  stereo.py  temperature.py
camera/calib_output/: T_base2cam_ref.yaml  T_cam2gripper.yaml  intrinsics.yaml  intrinsics_lc.yaml  intrinsics_rc.yaml
camera/calib_output/debug_images/: successful_detections.txt
camera/cfg/: T_cam2gripper.yaml  T_end2sensor0.yaml  T_end2sensor2.yaml  T_sensor0_to_sensor2.yaml  camera_lc.txt  camera_rc.txt  config_lc.yaml  intrinsics.yaml  robot_pos.txt
camera/examples/: auto_exposure_with_rgb.py  cnn_example.py  cnn_gecamera_stereo_example.py  depth_example.py  depth_example_with_dpe.py  depth_example_with_enet.py  depth_gen_cam_example.py  depth_injection_example.py  depth_reg_example.py  depth_reg_with_par_and_show_example.py  depth_reg_with_par_example.py  gen_camera_crop_image_example.py  gen_camera_reg_short_call_example.py  gen_camera_reg_with_par_example.py  gen_camera_short_call_example.py  image_test.py  multithread_callback_example.py  multithread_getframe_example.py  pc_test.py  point_cloud_segmatation_example.py  point_cloud_short_call_example.py  slam_injection_example.py  slam_short_call_example.py  stereo_example.py  stereo_test.py  superframe_example.py  sys_path.py  trackin_example.py  tracking_injection_example.py
camera/pc_datas/: 0001.ply
camera/pcd_datas/: 0000.ply  0002.ply
display_camera/: 1.py  CMakeLists.txt  camera_test_3.py  displayInuRGB.cpp  paras.yaml
function/: clear_files.py  copy_suffix.py  get_the_poses_from_cols.py  inspect_ply_attrs.py  readme.md  show_pcd.py  show_ply.py  testify_xyz.py
kinematics/: ik.py  readme.md  testify.py  ur10e_kine.py
log/: latest_build
my_ur10e_control/: ur_drag.py  ur_drag1.py  ur_drag2.py  ur_only_drag.py  ur_ros.py  ur_ros2.py  ur_rubbish.py  wr_data.py  z_ur_test.py
point_cloud/: path_matrices.txt  path_matrix.txt  path_matrix_1767864551.txt  path_matrix_4points.txt  path_planner copy.py  path_planner.py  readme.md
point_cloud/pcd_datas/: source_90.pcd
qt_vtk_pcl_registration_20251126/: CMakeLists.txt  PCLRegistration.h
qt_vtk_pcl_registration_20251126/src/: CMakeLists.txt  PCLRegistration.cpp  PCLRegistration.h
qt_vtk_pcl_registration_20251126/src/build_cmake_win/lib/Release/: PCLRegistration_shared.exp
registration/: main.cpp
registration/build_cmake_win/lib/Release/: PCLRegistration_shared.lib
src/my_matrix_transfer/: package.xml  setup.cfg  setup.py
src/my_matrix_transfer/my_matrix_transfer/: matrix_publisher.py  matrix_subscriber.py.py
ur10e/: build_tcp_matrix.py  readme.md  ur_drag.py  ur_drag3.py  ur_drag_combined.py  ur_rtde.py
ur10e/cfg/: T_end2cam.yaml  T_end2rgb.yaml  T_end2tcp.yaml  joint_result.txt  joints.txt  log.txt  poses.txt  poses_target.txt  poses_traj.txt  tcp.yaml
validation/: show_corrdinate.py  show_traj.py  test_pcd.py  testify.py  testify_registraition.py  testify_xyz.py
